--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "start:dev": "nodemon index.js"
+    "start:dev": "nodemon index.js",
+    "lint:check": "npx eslint . --ext js,ts",
+    "lint:fix": "npx eslint --fix . --ext js,ts",
+    "prettier:check": "prettier --check '**/*.{ts,js,json}'",
+    "prettier:fix": "prettier --write '**/*.{ts,js,json}'",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +27,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "nodemon": "^3.0.1"
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^8.0.3",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.2",
+    "typescript": "^5.2.2"
   }
 }
