--- a/contracts/package.json
+++ b/contracts/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:check": "eslint . --ext js",
+    "lint:fix": "eslint --fix . --ext js",
+    "prettier:check": "prettier --check --plugin=prettier-plugin-solidity '**/*.{js,json,sol}'",
+    "prettier:fix": "prettier --write --plugin=prettier-plugin-solidity '**/*.{js,json,sol}'",
+    "solhint:check": "solhint 'src/contracts/*.sol'",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +18,10 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@openzeppelin/contracts": "^4.9.3",
-    "hardhat": "^2.17.1"
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "hardhat": "^2.17.1",
+    "prettier": "^3.0.2",
+    "prettier-plugin-solidity": "^1.1.3"
   }
 }
