--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:check": "npx eslint . --ext js,ts",
+    "lint:fix": "npx eslint --fix . --ext js,ts",
+    "prettier:check": "prettier --check '**/*.{ts,js,json}'",
+    "prettier:fix": "prettier --write '**/*.{ts,js,json}'",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +48,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.2"
   }
 }
