--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -11,10 +11,10 @@
   "parserOptions": {
     "ecmaVersion": 12
   },
-  "rules": {
-    "node/no-unsupported-features/es-syntax": [
-      "error",
-      { "ignores": ["modules"] }
-    ]
-  }
+  // "rules": {
+  //   "node/no-unsupported-features/es-syntax": [
+  //     "error",
+  //     { "ignores": ["modules"] }
+  //   ]
+  // }
 }
