--- a/backend/package.json
+++ b/backend/package.json
@@ -8,31 +8,34 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "start:dev": "nodemon index.js",
+    "start": "ts-node index.ts",
+    "start:dev": "nodemon index.ts",
     "lint:check": "npx eslint . --ext js,ts",
     "lint:fix": "npx eslint --fix . --ext js,ts",
     "prettier:check": "prettier --check '**/*.{ts,js,json}'",
-    "prettier:fix": "prettier --write '**/*.{ts,js,json}'",
-    "prepare": "husky install"
+    "prettier:fix": "prettier --write '**/*.{ts,js,json}'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/sqlite3": "^3.1.8",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "web3": "^1.10.0"
+    "sqlite3": "^5.1.6",
+    "ts-node": "^10.9.1",
+    "web3": "^1.10.0",
+    "web3-utils": "^1.10.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "husky": "^8.0.3",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.2",
     "typescript": "^5.2.2"
