--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,14 @@
   "engines": {
     "node": "18.x"
   },
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node index.ts",
-    "start:dev": "nodemon index.ts",
+    "build": "tsc",
+    "start": "npm run build && node dist/server.js",
+    "start:ts": "ts-node server.ts",
+    "start:dev": "nodemon server.ts",
+    "deploy": "git push https://git.heroku.com/simplenft-api.git HEAD:master",
     "lint:check": "npx eslint . --ext js,ts",
     "lint:fix": "npx eslint --fix . --ext js,ts",
     "prettier:check": "prettier --check '**/*.{ts,js,json}'",
@@ -19,25 +22,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/sqlite3": "^3.1.8",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
     "web3": "^1.10.0",
     "web3-utils": "^1.10.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.2",
-    "typescript": "^5.2.2"
+    "prettier": "^3.0.2"
   }
 }
