--- a/contracts/.eslintrc
+++ b/contracts/.eslintrc
@@ -5,14 +5,5 @@
     "mocha": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "prettier"],
-  "parserOptions": {
-    "ecmaVersion": 12
-  },
-  "rules": {
-    "node/no-unsupported-features/es-syntax": [
-      "error",
-      { "ignores": ["modules"] }
-    ]
-  }
+  "extends": ["eslint:recommended", "prettier"]
 }
