--- a/contracts/package.json
+++ b/contracts/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "compile": "hardhat compile",
+    "deploy": "hardhat run --network sepolia scripts/deploy.js",
     "test": "hardhat test test/SimpleNFT.js",
     "lint:check": "eslint . --ext js",
     "lint:fix": "eslint --fix . --ext js",
     "prettier:check": "prettier --check --plugin=prettier-plugin-solidity '**/*.{js,json,sol}'",
     "prettier:fix": "prettier --write --plugin=prettier-plugin-solidity '**/*.{js,json,sol}'",
-    "solhint:check": "solhint 'src/contracts/*.sol'",
-    "prepare": "husky install"
+    "solhint:check": "solhint 'contracts/*.sol'"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "eslint-config-prettier": "^9.0.0",
     "hardhat": "^2.17.1",
     "prettier": "^3.0.2",
-    "prettier-plugin-solidity": "^1.1.3"
+    "prettier-plugin-solidity": "^1.1.3",
+    "solhint": "^3.6.2"
   }
 }
