--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,25 +12,37 @@
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.7.1",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path": "^0.12.7",
+    "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
+    "url": "^0.11.1",
     "web-vitals": "^2.1.4",
     "web3": "^4.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "npx tailwindcss -i ./src/components/input.css -o ./public/output.css && npx react-app-rewired build",
+    "build:css": "tailwindcss -i ./src/components/input.css -o ./public/output.css",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "lint:check": "npx eslint . --ext js,ts",
     "lint:fix": "npx eslint --fix . --ext js,ts",
     "prettier:check": "prettier --check '**/*.{ts,js,json}'",
-    "prettier:fix": "prettier --write '**/*.{ts,js,json}'",
-    "prepare": "husky install"
+    "prettier:fix": "prettier --write '**/*.{ts,js,json}'"
   },
   "eslintConfig": {
     "extends": [
@@ -55,7 +67,6 @@
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.2",
-    "tailwindcss": "^3.3.3"
+    "prettier": "^3.0.2"
   }
 }
