--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/connect-timeout": "^0.0.37",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/sqlite3": "^3.1.8",
+    "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
