--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -9,12 +9,7 @@
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 12
-  },
-  // "rules": {
-  //   "node/no-unsupported-features/es-syntax": [
-  //     "error",
-  //     { "ignores": ["modules"] }
-  //   ]
-  // }
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  }
 }
